# qif-micro

./: .gitignore  flake.nix  pyproject.toml
examples/: agg-count-sum.ipynb
src/qif_micro/: __init__.py  _internal.py  _utils.py  eval.py  measure.py  typing.py
src/qif_micro/_internal/: dataset.py  validation.py
src/qif_micro/datatypes/: __init__.py  channel.py  joint.py  probab_dist.py
src/qif_micro/mechanism/: __init__.py  geometric.py  record.py
src/qif_micro/model/: __init__.py  _internal.py  agg_count_sum.py  baseline.py  core.py  count_sum.py  datatypes.py  generic.py  random_response.py  raw_microdata.py
src/qif_micro/qif/: __init__.py  _utils.py  channel.py  compose.py  core.py  eval.py  probab.py  probability.py
src/qif_micro/qif/datatypes/: __init__.py  _internal.py  channel.py  joint.py  probab_dist.py
src/qif_micro/qif/measure/: __init__.py  bayes.py
